# ChangeLog for sci-biology/amos
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  17 Apr 2015; Martin Mokrejs <mmokrejs@fold.natur.cuni.cz>
  amos-3.1.0-r2.ebuild, amos-9999.ebuild:
  sci-biology/amos: fixed installation of perl-related files

  17 Apr 2015; Martin Mokrejs <mmokrejs@fold.natur.cuni.cz>
  amos-3.1.0-r2.ebuild, amos-9999.ebuild:
  sci-biology/amos: use doins instead of dobin

  17 Apr 2015; Martin Mokrejs <mmokrejs@fold.natur.cuni.cz>
  amos-3.1.0-r2.ebuild, amos-9999.ebuild:
  sci-biology/amos: fixed installation of perl-related files

*amos-3.1.0-r2 (31 Mar 2015)

  31 Mar 2015; Martin Mokrejs <mmokrejs@fold.natur.cuni.cz>
  +amos-3.1.0-r2.ebuild, +files/amos-3.1.0-gcc-4.7.patch,
  +files/amos-3.1.0-goBambus2.py-indent-and-cleanup.patch, amos-9999.ebuild:
  sci-biology/amos: fix installation process and dependencies

  29 Dec 2013; Justin Lecher <jlec@gentoo.org> -amos-3.1.0-r1.ebuild,
  amos-9999.ebuild, -files/amos-3.1.0-gcc-4.7.patch,
  -files/amos-3.1.0-goBambus2.py-indent-and-cleanup.patch,
  -files/amos.m4.patch:
  Move to tree

*amos-3.1.0-r1 (11 Sep 2013)

  11 Sep 2013; Martin Mokrejs <mmokrejs@fold.natur.cuni.cz>
  +amos-3.1.0-r1.ebuild, +files/amos-3.1.0-gcc-4.7.patch,
  +files/amos-3.1.0-goBambus2.py-indent-and-cleanup.patch:
  Fix indentation error and remove unused import of string module (there could
  be more cleanup as suggested by pychecker). Credits to
  http://sourceforge.net/p/amos/support-requests/1/

  19 Mar 2013; Justin Lecher <jlec@gentoo.org> amos-9999.ebuild:
  Bump to latest git HEAD, fixes qt problems, #348031

  03 Mar 2013; Justin Lecher <jlec@gentoo.org> amos-9999.ebuild, metadata.xml:
  Update to new qt deps names

  22 May 2012; Justin Lecher <jlec@gentoo.org> amos-9999.ebuild:
  Bump to EAPI=4, remove unnecessary bits