@@ -2,6 +2,11 @@
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  25 May 2015; Martin Mokrejs <mmokrejs@fold.natur.cuni.cz>
+  amos-3.1.0-r2.ebuild, amos-9999.ebuild:
+  added dev-qt/qt3support:4 to DEPEND because 'scanelf -qn /usr/bin/hawkeye'
+  confirms libQt3Support.so is used (thanks to Davide Pesavento pesa@g.o)
+
   17 Apr 2015; Martin Mokrejs <mmokrejs@fold.natur.cuni.cz>
   amos-3.1.0-r2.ebuild, amos-9999.ebuild:
   sci-biology/amos: fixed installation of perl-related files
